2021-04-13 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/gen.c:
	  Overwrite A in genMove_o only if not source register.

2021-04-12 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/gen.c:
	  Get sign bit with rlca instead of rla to allow flag restricted ph rules.

2021-04-12 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asgb/gbpst.c,
	  sdas/asgb/gbmch.c,
	  sdas/asgb/gb.h,
	  sdas/asxxsrc/asmain.c,
	  sdas/asxxsrc/asxxxx.h:
	  Backport .incbin and .tile for sm83 from ASXXXX 5.40

2021-04-12 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/gen.c,
	  src/z80/peeph-gbz80.def,
	  src/z80/peeph.def:
	  Don't emit pop/push for stack adjustment on sm83.
	  (For easier detection of uninitialized memory)

2021-04-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve unsigned shift by 4 and 5.

2021-04-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Avoid some unnecessary copies.

2021-04-09 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bitfields-bits1.c,
	  support/regression/tests/bitfields-bits2.c,
	  support/regression/tests/bitfields-checks.c,
	  support/regression/tests/bitfields-dead-loop.c:
	  Tests for bitfields at absolute addresses, picked from patch #373 by Visenri.
	* src/z80/gen.c,
	  support/regression/tests/bitwise8reg.c:
	  Fix use of 16-bit bitwise instructions for 8-bit calculations.

2021-04-07 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20060110-volatile.c,
	  support/regression/tests/stack-restore.c,
	  support/regression/tests/swap_add.c:
	  Improve stm8 peephole rule coverage, picked from patch #373 by Visenri.

2021-04-07 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  isRegInUse renamed to isRegDead.

2021-04-06 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Make code more readable by adding isRegInUse.

2021-04-04 Philipp Klaus Krause <pkk AT spth.de>
